# PixelML

./: .gitignore  PixelML.code-workspace  README.md
.devcontainer/: Dockerfile  deploy_kubeflow.sh  devcontainer.json
.devcontainer/kubeflow_cluster/: kind_config.yaml  patch_visualization.yaml  persistent_volume.yaml
docs/: PixelML.drawio
src/cognition/: pipeline.sh  pixelml.yaml  pyproject.toml  requirements.txt
src/cognition/cognition/: example.py
src/cognition/taxi/: .gitignore  Dockerfile  README.md  data_validation.ipynb  kubeflow_runner.py  local_runner.py  model_analysis.ipynb
src/cognition/taxi/pipeline/: configs.py  pipeline.py
src/cognition/vqa/: README.md  data_validation.ipynb
src/cognition/vqa/pipeline/: configs.py  pipeline.py
