[project]
name = "cognition"
version = "0.0.1"
authors = [
  { name="Stef Ruinard", email="stefruinard@microsoft.com" },
]
description = "A small example package"
requires-python = ">=3.7,<3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"